<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/grupa_home_search">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/search" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/grupa_profile_wspace">
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_workspaces"
            android:icon="@drawable/workspace"
            android:title="@string/your_workspaces" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/grupa_logout">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/exit"
            android:title="@string/logout" />
    </group>

</menu>
