<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mihovil.digitalnomad.RegistracijaActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastname"
        android:layout_below="@+id/name"
        android:layout_alignStart="@+id/name"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/email"
        android:hint="@string/email_email_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lastName"
        android:layout_below="@+id/lastName"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/registracija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/register" />
</RelativeLayout>
