<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/user_profile_edit_profile_txtEnterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/enter_old_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/user_profile_edit_profile_txtEnterNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/user_profile_edit_profile_txtEnterPassword"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/user_profile_edit_profile_txtRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/user_profile_edit_profile_txtEnterNewPassword"
        android:layout_below="@+id/user_profile_edit_profile_txtEnterNewPassword"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/user_profile_edit_user_btnSpremi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_profile_edit_profile_txtRepeatPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/save" />
</RelativeLayout>