<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mihovil.digitalnomad.Login_activity">

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/button"
        android:layout_marginEnd="46dp"
        android:layout_marginTop="79dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:layout_editor_absoluteY="316dp"
        tools:layout_editor_absoluteX="128dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        tools:layout_editor_absoluteY="107dp"
        tools:layout_editor_absoluteX="59dp"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/signup"
        android:layout_alignStart="@+id/pass"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="197dp"
        tools:ignore="LabelFor"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />
    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
